--- a/GATEWAY/src/main/resources/application.properties
+++ b/GATEWAY/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=GATEWAY
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+spring.cloud.discovery.enabled=true
+server.port=8080
