--- a/PATIENT_MODULE/src/main/resources/application.properties
+++ b/PATIENT_MODULE/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=PATIENT_MODULE
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+server.port=0
+
