--- a/AUTH_MODULE/src/main/resources/application.properties
+++ b/AUTH_MODULE/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.application.name=AUTH_MODULE
+spring.application.name=auth
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
 spring.config.import=file:.env[.properties]
+
+server.port=0
 
 spring.security.oauth2.client.registration.romailapp.client-id=${OAUTH_CLIENT_ID}
 spring.security.oauth2.client.registration.romailapp.client-secret=${OAUTH_CLIENT_SECRET}
 spring.security.oauth2.client.registration.romailapp.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.romailapp.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-spring.security.oauth2.client.provider.romailapp.
+spring.security.oauth2.client.registration.romailapp.redirect-uri=http://localhost:8080/login/oauth2/code/{registrationId}
 
 spring.security.oauth2.client.provider.romailapp.authorization-uri=${OAUTH_AUTHORIZATION_URI}
 spring.security.oauth2.client.provider.romailapp.token-uri=${OAUTH_TOKEN_URI}
