--- a/PATIENT_MODULE/src/main/resources/application.properties
+++ b/PATIENT_MODULE/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.application.name=PATIENT_MODULE
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 server.port=0
+spring.datasource.url=jdbc:mariadb://localhost:33061/patient
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
 
