--- a/APPOINTMENT_MODULE/src/main/resources/application.properties
+++ b/APPOINTMENT_MODULE/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=APPOINTMENT_MODULE
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 server.port=0
+spring.datasource.url=jdbc:mariadb://localhost:33062/appointment
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
