--- a/PRESCRIPTION_MODULE/src/main/resources/application.properties
+++ b/PRESCRIPTION_MODULE/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=PRESCRIPTION_MODULE
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+server.port=0
+spring.datasource.url=jdbc:mariadb://localhost:33063/prescription
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
