--- a/PATIENT_MODULE/src/main/resources/application.properties
+++ b/PATIENT_MODULE/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=PATIENT_MODULE
+spring.application.name=patient
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 server.port=0
