Gateway + auth test

--- a/AUTH_MODULE/src/main/resources/application.properties
+++ b/AUTH_MODULE/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.security.oauth2.client.provider.romailapp.authorization-uri=${OAUTH_AUTHO
 spring.security.oauth2.client.provider.romailapp.token-uri=${OAUTH_TOKEN_URI}
 spring.security.oauth2.client.provider.romailapp.user-info-uri=${OAUTH_USER_INFO_URI}
 spring.security.oauth2.client.provider.romailapp.user-name-attribute=sub
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${OAUTH_ISSUER_URI}
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
