--- a/GATEWAY/src/main/resources/application.properties
+++ b/GATEWAY/src/main/resources/application.properties
@@ -1,5 +1,53 @@
 spring.application.name=GATEWAY
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
-spring.cloud.discovery.enabled=true
+eureka.client.registry-fetch-interval-seconds=5
 server.port=8080
+
+spring.cloud.discovery.enabled=true
+spring.cloud.loadbalancer.service-discovery.timeout=5000
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#spring.cloud.gateway.discovery.locator.enabled=true
+eureka.instance.hostname=localhost
+
+spring.cloud.gateway.routes[0].id=auth
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[0].uri=lb://auth
+#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=oauth
+spring.cloud.gateway.routes[1].predicates[0]=Path=/oauth2/**
+spring.cloud.gateway.routes[1].uri=lb://auth
+#spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[2].id=login
+spring.cloud.gateway.routes[2].predicates[0]=Path=/login/**
+spring.cloud.gateway.routes[2].uri=lb://auth
+#spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[3].id=logout
+spring.cloud.gateway.routes[3].predicates[0]=Path=/logout/**
+spring.cloud.gateway.routes[3].uri=lb://auth
+#spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[4].id=patient
+spring.cloud.gateway.routes[4].predicates[0]=Path=/patient/**
+spring.cloud.gateway.routes[4].uri=lb://patient
+
+spring.cloud.gateway.routes[5].id=appointment
+spring.cloud.gateway.routes[5].predicates[0]=Path=/appointments/**
+spring.cloud.gateway.routes[5].uri=lb://appointment
+spring.cloud.gateway.routes[5].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[6].id=patients
+spring.cloud.gateway.routes[6].predicates[0]=Path=/patients/**
+spring.cloud.gateway.routes[6].uri=lb://patient
+spring.cloud.gateway.routes[6].filters[0]=StripPrefix=1
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.netflix.discovery=DEBUG
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth.romail.app/.well-known/openid-configuration
+
+management.endpoints.web.exposure.include=*
+management.endpoint.gateway.access=read_only
